apps/base/home-homeassistant/deploy/homeassistant/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homeassistant
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: homeassistant
      app.kubernetes.io/component: homeassistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homeassistant
        app.kubernetes.io/component: homeassistant
      annotations:
        k8s.v1.cni.cncf.io/networks: "kube-system/k8s-bridge"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000 # homeassistant
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: homeassistant
        image: "registry.lan/homeassistant:2026.7.2-custom"
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 8123
          name: homeassistant
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: homeassistant-data
          mountPath: /config
          subPath: config
        - name: homeassistant-data
          mountPath: /home/homeassistant/.cache
          subPath: .cache
        - name: homeassistant-data
          mountPath: /home/homeassistant/.config
          subPath: .config
        - name: homeassistant-data
          mountPath: /home/homeassistant/.local
          subPath: .local
        - name: homeassistant-config
          mountPath: /opt/ldap-auth/config.cfg
          subPath: ldap-auth-config.cfg
        - name: cluster-ca-volume
          mountPath: /etc/ssl/cluster/ca.cert
          subPath: ca.crt
        - name: tmp-volume
          mountPath: /run/udev
          subPath: run-udev
        # Required to install custom components' requirements
        # Write access needed for at least:
        # - /usr/local/lib/pythonX.YZ/site-packages/
        # - /usr/local/bin
        - name: tmp-volume
          mountPath: /usr/local
          subPath: usr-local
        - name: tmp-volume
          mountPath: /tmp
          subPath: tmp
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: homeassistant
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 250m
            memory: 512Mi
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: homeassistant-data
        persistentVolumeClaim:
          claimName: homeassistant-data
      - name: homeassistant-config
        configMap:
          name: homeassistant-config
      - name: homeassistant-config-bootstrap
        configMap:
          name: homeassistant-config-bootstrap
      - name: homeassistant-secret-bootstrap
        secret:
          secretName: homeassistant-secret-bootstrap
      - name: homeassistant-socat-config
        configMap:
          name: homeassistant-socat-config
      - name: cluster-ca-volume
        secret:
          secretName: cluster-ca
      - name: tmp-volume
        emptyDir: {}
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
