apps/base/home-homeassistant/deploy/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  ports:
  - port: 80
    name: homeassistant
    targetPort: homeassistant
  selector:
    app.kubernetes.io/name: homeassistant
    app.kubernetes.io/component: homeassistant
