apps/base/home-homeassistant/deploy/homeassistant/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-homeassistant
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: homeassistant
      app.kubernetes.io/component: homeassistant

  ingress:
    - ports:
        - port: homeassistant
      from:
        # Allow from the ingress controller
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx

        # Allow from nodered
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: home-nodered
          podSelector:
            matchLabels:
              app.kubernetes.io/name: nodered
              app.kubernetes.io/component: nodered
